[vis/editor] style errors a bit, show above the schemaConfig

--- a/desktop/src/kibana/apps/visualize/editor/agg.html
+++ b/desktop/src/kibana/apps/visualize/editor/agg.html
@@ -66,8 +66,8 @@
   </div>
 
   <div class="vis-editor-agg-editor" ng-show="editorOpen">
-    <div ng-show="aggIsTooLow">
-      <p class="text-danger">
+    <div ng-if="aggIsTooLow" class="form-group">
+      <p class="vis-editor-agg-error">
         "{{ agg.schema.title }}" aggs must run before all other buckets!
       </p>
       <input
@@ -78,18 +78,6 @@
         style="display: none;">
     </div>
 
-    <div class="form-group">
-      <label ng-if="$index < 1">Aggregation</label>
-      <label ng-if="$index >= 1">Sub Aggregation</label>
-      <select
-        name="agg"
-        class="form-control"
-        ng-model="agg.type"
-        required
-        ng-options="agg as agg.title for agg in aggTypeOptions | aggFilter:agg.schema.aggFilter">
-      </select>
-    </div>
-
-    <!-- schema editors get added here -->
+    <!-- schema editors get added down here: aggSelect.html, agg_types/controls/*.html -->
   </div>
 </ng-form>
