Add example pattern using kbn-info directive
Provide info based on verbage found in Logstash's elasticsearch output (http://logstash.net/docs/1.4.2/outputs/elasticsearch#index) documentation.

--- a/desktop/src/kibana/apps/settings/sections/indices/_create.html
+++ b/desktop/src/kibana/apps/settings/sections/indices/_create.html
@@ -25,7 +25,7 @@
           <div class="form-group">
             <label>
               Index name
-              or pattern &mdash;
+              or pattern <kbn-info info="Patterns can be defined dynamically with brackets being used to denote static text. Example: [logstash-]YYYY.MM.DD"></kbn-info> &mdash;
               <small><a href="http://momentjs.com/docs/#/displaying/format/">docs</a></small>
             </label>
             <input
