--- a/desktop/src/kibana/apps/settings/sections/indices/_create.html
+++ b/desktop/src/kibana/apps/settings/sections/indices/_create.html
@@ -25,7 +25,7 @@
           <div class="form-group">
             <label>
               Index name
-              or pattern <kbn-info info="Patterns can be defined dynamically with brackets being used to denote static text. Example: [logstash-]YYYY.MM.DD"></kbn-info> &mdash;
+              or pattern <kbn-info info="Patterns allow you to define dynamic index names. Static text in an index name is denoted using brackets. Example: [logstash-]YYYY.MM.DD"></kbn-info> &mdash;
               <small><a href="http://momentjs.com/docs/#/displaying/format/">docs</a></small>
             </label>
             <input
