--- a/desktop/src/kibana/apps/settings/sections/indices/_create.html
+++ b/desktop/src/kibana/apps/settings/sections/indices/_create.html
@@ -25,9 +25,11 @@
           <div class="form-group">
             <label>
               Index name
-              or pattern <kbn-info info="Patterns allow you to define dynamic index names. Static text in an index name is denoted using brackets. Example: [logstash-]YYYY.MM.DD"></kbn-info> &mdash;
+              or pattern &mdash;
               <small><a href="http://momentjs.com/docs/#/displaying/format/">docs</a></small>
             </label>
+            <p class="help-block" ng-if="!index.nameIsPattern">Patterns allow you to define dynamic index names using * as a wildcard. Example: logstash-*</p>
+            <p class="help-block" ng-if="index.isTimeBased && index.nameIsPattern">Patterns allow you to define dynamic index names. Static text in an index name is denoted using brackets. Example: [logstash-]YYYY.MM.DD</p>
             <input
               ng-model="index.name"
               ng-attr-placeholder="{{index.defaultName}}"
