fix comments, remove unused code

--- a/desktop/src/kibana/apps/visualize/editor/agg_group.html
+++ b/desktop/src/kibana/apps/visualize/editor/agg_group.html
@@ -13,7 +13,7 @@
         list="group">
       </nesting-indicator>
 
-      <!-- agg.html -->
+      <!-- agg.html - controls for aggregation -->
       <vis-editor-agg
         vis="vis"
         group="group"
