--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -137,6 +137,7 @@
           'specs/utils/registry/index',
           'specs/directives/filter_bar',
           'specs/components/agg_types/index',
+          'specs/components/agg_types/param_types/index',
           'specs/components/vis/index',
           'specs/components/reflow_watcher',
           'specs/components/clipboard'
