--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -69,7 +69,7 @@
           'css!screencast_reporter_css'
         ], function (ScreencastReporter) {
           mocha.reporter(ScreencastReporter);
-          done()
+          done();
         });
       }
 
@@ -77,6 +77,7 @@
         require([
           'kibana',
           'sinon/sinon',
+          'angular',
           'specs/apps/discover/hit_sort_fn',
           'specs/apps/discover/directives/table',
           'specs/apps/discover/directives/discover_field',
