--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -19,7 +19,7 @@
       });
 
       require.config({
-        baseUrl: '/src/kibana',
+        baseUrl: '/',
         paths: {
           config: '/config',
           test_utils: '../../test/utils',
@@ -134,7 +134,7 @@
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
-          'specs/utils/registry/index',
+          'specs/utils/indexed_array/index',
           'specs/directives/filter_bar',
           'specs/components/agg_types/index',
           'specs/components/vis/index',
