[registry] added test

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -138,7 +138,8 @@
           'specs/directives/filter_bar',
           'specs/components/agg_types/index',
           'specs/components/vis/index',
-          'specs/components/reflow_watcher'
+          'specs/components/reflow_watcher',
+          'specs/registry/index'
         ], function (kibana, sinon) {
           kibana.load(function () {
             var xhr = sinon.useFakeXMLHttpRequest();
