--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -111,26 +111,26 @@
           'specs/state_management/app_state',
           'specs/utils/diff_object',
           'specs/factories/events',
-          'specs/vislib/color',
-          'specs/vislib/zero_injection',
-          'specs/vislib/labels',
-          'specs/vislib/x_axis',
-          'specs/vislib/y_axis',
-          'specs/vislib/axis_title',
-          'specs/vislib/chart_title',
-          'specs/vislib/layout_types',
-          'specs/vislib/vis_types',
-          'specs/vislib/splits',
-          'specs/vislib/layout',
-          'specs/vislib/_chart',
-          'specs/vislib/column_layout',
+          'specs/vislib/components/color',
+          'specs/vislib/components/zero_injection',
+          'specs/vislib/components/labels',
+          'specs/vislib/lib/x_axis',
+          'specs/vislib/lib/y_axis',
+          'specs/vislib/lib/axis_title',
+          'specs/vislib/lib/chart_title',
+          'specs/vislib/lib/layout_types',
+          'specs/vislib/lib/splits',
+          'specs/vislib/lib/layout',
+          'specs/vislib/lib/tooltip',
+          'specs/vislib/lib/handler',
+          'specs/vislib/lib/_error_handler',
+          'specs/vislib/lib/data',
+          'specs/vislib/lib/column_layout',
+          'specs/vislib/lib/resize_checker',
+          'specs/vislib/visualizations/_chart',
+          'specs/vislib/visualizations/vis_types',
           'specs/vislib/index',
           'specs/vislib/vis',
-          'specs/vislib/tooltip',
-          'specs/vislib/handler',
-          'specs/vislib/_error_handler',
-          'specs/vislib/data',
-          'specs/vislib/resize_checker',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
