--- a/desktop/src/kibana/apps/visualize/editor/panels/share.html
+++ b/desktop/src/kibana/apps/visualize/editor/panels/share.html
@@ -1,11 +1,17 @@
 <form role="form" class="vis-share">
-  <div class="form-group">
-  <label>Embed this visualization. <small>Copy code into your html source. Note all clients must still be able to access kibana</small></label>
-    <div class="form-control" disabled>&lt;iframe src="{{conf.shareData().embed}}" height="400" width="600"&gt;&lt;/iframe&gt;</div>
-  </div>
 
-  <div class="form-group">
-  <label>Share a link</label>
-    <div class="form-control" disabled>{{conf.shareData().link}}</div>
-  </div>
+  <p>
+    <div class="form-group">
+      <label>Embed this visualization. <a tooltip="Copy to clipboard"><i clip-copy="conf.shareData().embed" class="fa fa-clipboard"></i></a> <small>Add to your html source. Note all clients must still be able to access kibana</small></label>
+      <div class="form-control" disabled>{{conf.shareData().embed}}</div>
+    </div>
+  </p>
+
+  <p>
+    <div class="form-group">
+      <label>Share a link <a tooltip="Copy to clipboard"><i clip-copy="conf.shareData().link" class="fa fa-clipboard"></i></a></label>
+      <div class="form-control" disabled>{{conf.shareData().link}}</div>
+    </div>
+  </p>
+
 </form>
