--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -145,7 +145,8 @@
           'specs/visualize/_build_hierarchial_data',
           'specs/visualize/_extract_buckets',
           'specs/visualize/_transform_aggregation',
-          'specs/visualize/_create_raw_data'
+          'specs/visualize/_create_raw_data',
+          'specs/visualize/_array_to_linked_list'
         ], function (kibana, sinon) {
           kibana.load(function () {
             var xhr = sinon.useFakeXMLHttpRequest();
