--- a/desktop/src/kibana/apps/visualize/editor/panels/share.html
+++ b/desktop/src/kibana/apps/visualize/editor/panels/share.html
@@ -2,14 +2,18 @@
 
   <p>
     <div class="form-group">
-      <label>Embed this visualization. <a tooltip="Copy to clipboard"><i clip-copy="conf.shareData().embed" class="fa fa-clipboard"></i></a> <small>Add to your html source. Note all clients must still be able to access kibana</small></label>
+      <label>Embed this visualization.
+        <kbn-clipboard copy="conf.shareData().embed"></kbn-clipboard>
+
+        <small>Add to your html source. Note all clients must still be able to access kibana</small>
+      </label>
       <div class="form-control" disabled>{{conf.shareData().embed}}</div>
     </div>
   </p>
 
   <p>
     <div class="form-group">
-      <label>Share a link <a tooltip="Copy to clipboard"><i clip-copy="conf.shareData().link" class="fa fa-clipboard"></i></a></label>
+      <label>Share a link <kbn-clipboard copy="conf.shareData().link"></kbn-clipboard></label>
       <div class="form-control" disabled>{{conf.shareData().link}}</div>
     </div>
   </p>
