--- a/desktop/src/kibana/plugins/visualize/editor/agg_group.html
+++ b/desktop/src/kibana/plugins/visualize/editor/agg_group.html
@@ -42,7 +42,7 @@
       class="vis-editor-agg-wide-btn btn btn-xs btn-default" >
 
       <div ng-if="!addForm.visible">
-        <span ng-if="groupName === 'buckets' && (!group.length || group.length === 0)">
+        <span ng-if="groupName !== 'buckets' || (!group.length || group.length === 0)">
           <i class="fa fa-plus"></i> Add Aggregation
         </span>
         <span ng-if="groupName === 'buckets' && group.length >= 1">
