Teasing apart the branch walking from the hierarchial tooltip

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -147,7 +147,8 @@
           'specs/visualize/_extract_buckets',
           'specs/visualize/_transform_aggregation',
           'specs/visualize/_create_raw_data',
-          'specs/visualize/_array_to_linked_list'
+          'specs/visualize/_array_to_linked_list',
+          'specs/visualize/_collect_branch'
         ], function (kibana, sinon) {
           kibana.load(function () {
             var xhr = sinon.useFakeXMLHttpRequest();
