--- a/desktop/src/kibana/plugins/visualize/editor/advanced_toggle.html
+++ b/desktop/src/kibana/plugins/visualize/editor/advanced_toggle.html
@@ -1,8 +1,6 @@
-<div class="advanced-toggle">
-  <div ng-show="!advancedToggled">
-    <a ng-click="advancedToggled = !advancedToggled">Advanced Parameters</a>
-  </div>
-  <div ng-show="advancedToggled">
-    <a ng-click="advancedToggled = !advancedToggled">Hide Advanced</a>
-  </div>
+<div class="advanced-toggle pull-right">
+  <a ng-click="advancedToggled = !advancedToggled">
+    <i class="fa fa-caret-down" ng-class="{'fa-caret-down': advancedToggled, 'fa-caret-left': !advancedToggled}"></i>
+    Advanced
+  </a>
 </div>
