add debounce service, with mock tests

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -98,6 +98,7 @@
           'specs/filters/rison',
           'specs/filters/short_dots',
           'specs/filters/start_from',
+          'specs/services/debounce',
           'specs/services/storage',
           'specs/services/persisted_log',
           'specs/services/url',
