--- a/desktop/src/kibana/plugins/table_vis/table_vis.html
+++ b/desktop/src/kibana/plugins/table_vis/table_vis.html
@@ -1,3 +1,3 @@
-<div ng-controller="TableVisController" class="TableVis">
-  <pre>{{ tableData | json }}</pre>
+<div ng-controller="KbnTableVisController" class="TableVis">
+  <kbn-agg-table table="table"></kbn-agg-table>
 </div>
