Fix handling of multiple unescaped sequences in index pattern matching. Closes #1570

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -139,6 +139,7 @@
           'specs/directives/filter_bar',
           'specs/components/agg_types/index',
           'specs/components/agg_types/param_types/index',
+          'specs/components/index_pattern/_pattern_to_wildcard',
           'specs/components/vis/index',
           'specs/components/reflow_watcher',
           'specs/registry/index',
