[aggTable] added tests for the table portion

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -158,7 +158,8 @@
           'specs/components/agg_response/hierarchical/_create_raw_data',
           'specs/components/agg_response/hierarchical/_array_to_linked_list',
           'specs/components/agg_response/hierarchical/_collect_branch',
-          'specs/components/agg_response/tabify/tabify_agg_response'
+          'specs/components/agg_response/tabify/tabify_agg_response',
+          'specs/components/agg_table/index'
         ], function () {
           bootstrap(kibana, sinon);
         });
