fixed require paths

--- a/desktop/src/kibana/plugins/vis_types/vislib/editors/tile_map.html
+++ b/desktop/src/kibana/plugins/vis_types/vislib/editors/tile_map.html
@@ -1,1 +1,29 @@
-<div>{{vis.params.mapType}}</div>
+<!-- <div>{{vis.params.mapType}}</div> -->
+
+<!-- interface for editing vislib params -->
+<div>
+  <div>
+    <label>
+      <input type="radio" ng-model="vis.params.mapType">
+      Clustered Markers
+    </label>
+  </div>
+  <div>
+    <label>
+      <input type="radio" ng-model="vis.params.mapType">
+      Heat Map
+    </label>
+  </div>
+  <div>
+    <label>
+      <input type="radio" ng-model="vis.params.mapType">
+      Scaled Circle Markers
+    </label>
+  </div>
+  <div>
+    <label>
+      <input type="radio" ng-model="vis.params.mapType">
+      Colored Circle Markers
+    </label>
+  </div>
+</div>
