updated UI for users to select map type

--- a/desktop/src/kibana/plugins/vis_types/vislib/editors/tile_map.html
+++ b/desktop/src/kibana/plugins/vis_types/vislib/editors/tile_map.html
@@ -1,29 +1,7 @@
-<!-- <div>{{vis.params.mapType}}</div> -->
-
-<!-- interface for editing vislib params -->
-<div>
-  <div>
-    <label>
-      <input type="radio" ng-model="vis.params.mapType">
-      Clustered Markers
-    </label>
-  </div>
-  <div>
-    <label>
-      <input type="radio" ng-model="vis.params.mapType">
-      Heat Map
-    </label>
-  </div>
-  <div>
-    <label>
-      <input type="radio" ng-model="vis.params.mapType">
-      Scaled Circle Markers
-    </label>
-  </div>
-  <div>
-    <label>
-      <input type="radio" ng-model="vis.params.mapType">
-      Colored Circle Markers
-    </label>
-  </div>
+<!-- vis type specific options -->
+<div ng-repeat="mapType in vis.type.params.mapTypes">
+  <label>
+    <input type="radio" value="{{mapType}}" ng-model="vis.params.mapType" name="mapType" ng-checked="mapType === vis.params.mapType">
+    {{mapType}}
+  </label>
 </div>
