--- a/desktop/src/kibana/plugins/table_vis/table_vis.html
+++ b/desktop/src/kibana/plugins/table_vis/table_vis.html
@@ -1,3 +1,3 @@
 <div ng-controller="KbnTableVisController" class="TableVis">
-  <kbn-agg-table-group group="tableGroups"></kbn-agg-table-group>
+  <kbn-agg-table-group group="tableGroups" per-page="vis.params.perPage"></kbn-agg-table-group>
 </div>
