--- a/desktop/src/kibana/plugins/table_vis/table_vis_config.html
+++ b/desktop/src/kibana/plugins/table_vis/table_vis_config.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-  <label>Page Size</label>
-  <input type="number" ng-model="vis.params.perPage">
+  <label>Per Page</label>
+  <input type="number" ng-model="vis.params.perPage" class="form-control">
 </div>
