Tweak vis option styling, make section collapsed by default

--- a/desktop/src/kibana/plugins/vis_types/controls/vislib_basic_options.html
+++ b/desktop/src/kibana/plugins/vis_types/controls/vislib_basic_options.html
@@ -1,11 +1,11 @@
 <div>
-  <div>
+  <div class="vis-option-item">
     <label>
       <input type="checkbox" ng-model="vis.params.addTooltip">
       Show Tooltip
     </label>
   </div>
-  <div>
+  <div class="vis-option-item">
     <label>
       <input type="checkbox" ng-model="vis.params.addLegend">
       Show Legend
