Closes #1550 - Slugify IDs with the most minimal scheme

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -157,7 +157,8 @@
           'specs/visualize/_transform_aggregation',
           'specs/visualize/_create_raw_data',
           'specs/visualize/_array_to_linked_list',
-          'specs/visualize/_collect_branch'
+          'specs/visualize/_collect_branch',
+          'specs/utils/slugify_id'
         ], function () {
           bootstrap(kibana, sinon);
         });
