use a 3rd param to catch a fetch, instead of putting it in the directive

--- a/desktop/src/kibana/plugins/visualize/editor/editor.html
+++ b/desktop/src/kibana/plugins/visualize/editor/editor.html
@@ -81,7 +81,7 @@
     <vis-editor-sidebar
       ng-if="!appEmbedded"
       vis="editableVis"
-      apply="stageEditableVis(); fetch();"
+      apply="stageEditableVis();"
       reset="resetEditableVis();">
     </vis-editor-sidebar>
 
