[visualize] allow specifying the editableVis

--- a/desktop/src/kibana/plugins/visualize/editor/editor.html
+++ b/desktop/src/kibana/plugins/visualize/editor/editor.html
@@ -87,7 +87,7 @@
 
     <div class="vis-editor-canvas">
       <p class="vis-editor-canvas-title" ng-if="savedVis.title" ng-bind="savedVis.title"></p>
-      <visualize vis="vis" search-source="savedVis.searchSource"></visualize>
+      <visualize vis="vis" editable-vis="editableVis"  search-source="savedVis.searchSource"></visualize>
     </div>
   </div>
 
