[visualize/editor/visParams] always show the vis params if there are no aggConfigs

--- a/desktop/src/kibana/plugins/visualize/editor/vis_options.html
+++ b/desktop/src/kibana/plugins/visualize/editor/vis_options.html
@@ -1,8 +1,12 @@
 <li class="sidebar-item">
   <div class="sidebar-item-title" ng-click="showVisOptions = !showVisOptions">
     view options
-    <i class="fa fa-caret-down" ng-class="{'fa-caret-down': showVisOptions, 'fa-caret-right': !showVisOptions}"></i>
+    <i
+      class="fa fa-caret-down"
+      ng-if="!alwaysShowOptions"
+      ng-class="{'fa-caret-down': showVisOptions, 'fa-caret-right': !showVisOptions}">
+    </i>
   </div>
 
-  <div class="visualization-options" ng-show="!!showVisOptions"></div>
+  <div class="visualization-options" ng-show="alwaysShowOptions || showVisOptions"></div>
 </li>
