Sense: add settings for disabling and enabling of mappings & aliases
Closes #334

--- a/sense/index.html
+++ b/sense/index.html
@@ -170,6 +170,16 @@
           </select>
         </div>
       </div>
+      <div class="control-group">
+        <label class="control-label" for="font_size">Autocomplete</label>
+        <div class="controls">
+          <label class="checkbox">
+            <input id="autocomplete_mappings" type="checkbox">Mappings</input>
+          </label>
+          <label class="checkbox">
+            <input id="autocomplete_indices" type="checkbox">Indices &amp; Aliases</input>
+          </label>
+        </div>
     </form>
   </div>
   <div class="modal-footer">
