--- a/desktop/src/kibana/plugins/settings/sections/advanced/index.html
+++ b/desktop/src/kibana/plugins/settings/sections/advanced/index.html
@@ -2,7 +2,7 @@
   <kbn-settings-advanced class="container">
     <div class="bs-callout bs-callout-warning">
       <h4>Caution: You can break stuff here</h4>
-      Be careful in here, these setting are for very advanced users only. Tweaks you make here can break large poritions of Kibana.
+      Be careful in here, these setting are for very advanced users only. Tweaks you make here can break large portions of Kibana.
       Some of these settings may be undocumented, unsupported or experimental. Blanking a field will cause Kibana to use its internal
       defaults which may be unacceptable given other configuration directives.
     </div>
