Fixed typo in tooltip.

--- a/desktop/src/kibana/plugins/settings/sections/indices/_create.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_create.html
@@ -96,7 +96,7 @@
             <label>
               Time-field name
               &nbsp;
-              <kbn-info info="This field will be use to filter events with the global time filter"></kbn-info>
+              <kbn-info info="This field will be used to filter events with the global time filter"></kbn-info>
               &nbsp;
               <small>
                 <a ng-click="refreshFieldList();"> refresh fields</a>
