--- a/desktop/src/kibana/plugins/visualize/editor/panels/share.html
+++ b/desktop/src/kibana/plugins/visualize/editor/panels/share.html
@@ -2,9 +2,9 @@
 
   <p>
     <div class="form-group">
-      <label>
-        Embed this visualization.
+      <label>Embed this visualization.
         <kbn-clipboard copy="conf.shareData().embed"></kbn-clipboard>
+
         <small>Add to your html source. Note all clients must still be able to access kibana</small>
       </label>
       <div class="form-control" disabled>{{conf.shareData().embed}}</div>
@@ -13,10 +13,7 @@
 
   <p>
     <div class="form-group">
-      <label>
-        Share a link
-        <kbn-clipboard copy="conf.shareData().link"></kbn-clipboard>
-      </label>
+      <label>Share a link <kbn-clipboard copy="conf.shareData().link"></kbn-clipboard></label>
       <div class="form-control" disabled>{{conf.shareData().link}}</div>
     </div>
   </p>
