--- a/desktop/src/kibana/plugins/table_vis/table_vis_config.html
+++ b/desktop/src/kibana/plugins/table_vis/table_vis_config.html
@@ -2,3 +2,10 @@
   <label>Per Page</label>
   <input type="number" ng-model="vis.params.perPage" class="form-control">
 </div>
+
+<div class="checkbox">
+  <label>
+    <input type="checkbox" ng-model="vis.params.showPartialRows">
+    Show Partial Rows
+  </label>
+</div>
