Sense: rename autocomplete setting from mapping to fields

--- a/sense/index.html
+++ b/sense/index.html
@@ -174,7 +174,7 @@
         <label class="control-label" for="font_size">Autocomplete</label>
         <div class="controls">
           <label class="checkbox">
-            <input id="autocomplete_mappings" type="checkbox">Mappings</input>
+            <input id="autocomplete_fields" type="checkbox">Fields</input>
           </label>
           <label class="checkbox">
             <input id="autocomplete_indices" type="checkbox">Indices &amp; Aliases</input>
