Sense: missing div close

--- a/sense/index.html
+++ b/sense/index.html
@@ -180,6 +180,7 @@
             <input id="autocomplete_indices" type="checkbox">Indices &amp; Aliases</input>
           </label>
         </div>
+      </div>
     </form>
   </div>
   <div class="modal-footer">
