[vis] use the isHierarchical method, not the property of the visType

--- a/desktop/src/kibana/plugins/vis_debug_spy/vis_debug.html
+++ b/desktop/src/kibana/plugins/vis_debug_spy/vis_debug.html
@@ -26,7 +26,7 @@
               Hierarchical Data
             </th>
             <td>
-              {{vis.type.hierarchicalData}}
+              {{vis.isHierarchical()}}
             </td>
           </tr>
         </table>
