[tableVis] allow configuring the way metrics are calculated for the metric vis

--- a/desktop/src/kibana/plugins/table_vis/table_vis_config.html
+++ b/desktop/src/kibana/plugins/table_vis/table_vis_config.html
@@ -6,6 +6,13 @@
 <div class="checkbox">
   <label>
     <input type="checkbox" ng-model="vis.params.showPartialRows">
-    Show Partial Rows
+    Show partial rows
+  </label>
+</div>
+
+<div class="checkbox">
+  <label>
+    <input type="checkbox" ng-model="vis.params.metricsAtAllLevels">
+    Calculate metrics for each bucket
   </label>
 </div>
