--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -161,7 +161,8 @@
           'specs/components/agg_response/tabify/tabify',
           'specs/components/agg_table/index',
           'specs/plugins/vis_types/index',
-          'specs/utils/slugify_id'
+          'specs/utils/slugify_id',
+          'specs/plugins/table_vis/index'
         ], function () {
           bootstrap(kibana, sinon);
         });
