[visualize/visOptions] hide if the vis type does not have a param editor

--- a/desktop/src/kibana/plugins/visualize/editor/vis_options.html
+++ b/desktop/src/kibana/plugins/visualize/editor/vis_options.html
@@ -1,4 +1,4 @@
-<li class="sidebar-item">
+<li class="sidebar-item" ng-show="vis.type.params.editor">
   <div class="sidebar-item-title" ng-click="showVisOptions = !showVisOptions">
     view options
     <i
