Make changes as per Spencer's suggestions

--- a/desktop/src/kibana/plugins/metric_vis/metric_vis.html
+++ b/desktop/src/kibana/plugins/metric_vis/metric_vis.html
@@ -1,4 +1,4 @@
-<div ng-controller="KbnMetricVisController" class="MetricVis">
-    <div class="MetricValue">{{metric.value}}</div>
+<div ng-controller="KbnMetricVisController" class="metric-vis">
+    <div class="metric-value">{{metric.value}}</div>
     <div>{{metric.label}}</div>
 </div>
