--- a/desktop/src/kibana/index.html
+++ b/desktop/src/kibana/index.html
@@ -25,63 +25,5 @@
       require(['kibana'], function (kibana) { kibana.init(); });
     </script>
   </head>
-  <body kibana ng-class="'application-' + activeApp.id">
-    <kbn-notifications list="notifList"></kbn-notifications>
-    <div class="content" style="display: none;">
-      <nav ng-hide="appEmbedded" bindonce class="navbar navbar-inverse navbar-static-top">
-        <div class="container-fluid">
-
-          <div class="navbar-header">
-            <button ng-click="showCollapsed = !showCollapsed" type="button" class="navbar-toggle">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <span class="navbar-brand visible-xs">{{ activeApp.name }}
-              <span ng-show="httpActive.length" class="spinner">
-              </span>
-            </span>
-          </div>
-
-
-          <!-- Full navbar -->
-          <div collapse="!showCollapsed" class="navbar-collapse" id="kibana-primary-navbar">
-            <ul class="nav navbar-nav">
-              <li ng-repeat="app in apps.inOrder" ng-class="{active: activeApp === app}">
-                <a ng-href="#{{app.lastPath}}" bo-text="app.name"></a>
-              </li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-              <li ng-show="httpActive.length" class="navbar-text">
-                <div class="spinner">
-                </div>
-              </li>
-              <li ng-if="setupComplete" ng-show="timefilter.enabled" class="navbar-timepicker-display">
-                <a ng-click="toggleTimepicker()">
-                  <pretty-duration from="timefilter.time.from" to="timefilter.time.to"></pretty-duration>
-                  &nbsp;
-                  <i class="fa fa-clock-o"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <!-- /Full navbar -->
-        </div>
-      </nav>
-
-      <config config-template="globalConfigTemplate" config-object="opts"></config>
-
-      <div class="application" ng-view></div>
-    </div>
-    <style-compile>
-      .truncate-by-height {
-        max-height: {{ truncateMaxHeight }};
-      }
-      .truncate-by-height::before {
-        top: {{ truncateGradientTop }};
-      }
-    </style-compile>
-  </body>
+  <body kibana ng-class="'application-' + activeApp.id"></body>
 </html>
