--- a/desktop/src/kibana/plugins/visualize/editor/editor.html
+++ b/desktop/src/kibana/plugins/visualize/editor/editor.html
@@ -86,7 +86,7 @@
     </vis-editor-sidebar>
 
     <div class="vis-editor-canvas">
-      <p class="vis-editor-canvas-title" ng-if="savedVis.title" ng-bind="savedVis.title"></p>
+      <h3 class="vis-editor-canvas-title" ng-if="savedVis.id" ng-bind="savedVis.title"></h3>
       <visualize vis="vis" editable-vis="editableVis"  search-source="savedVis.searchSource"></visualize>
     </div>
   </div>
