[$listen] added tests

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -160,6 +160,7 @@
           'specs/components/agg_response/hierarchical/_collect_branch',
           'specs/components/agg_response/tabify/tabify',
           'specs/components/agg_table/index',
+          'specs/components/listen/listen',
           'specs/plugins/vis_types/index',
           'specs/utils/slugify_id'
         ], function () {
