adding reference to lodash

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -138,6 +138,7 @@
           'specs/vislib/lib/resize_checker',
           'specs/vislib/visualizations/_chart',
           'specs/vislib/visualizations/vis_types',
+          'specs/vislib/visualizations/pie_chart',
           'specs/vislib/index',
           'specs/vislib/vis',
           'specs/utils/diff_time_picker_vals',
