[styleCompile] added tests

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -161,6 +161,7 @@
           'specs/components/agg_response/tabify/tabify',
           'specs/components/agg_table/index',
           'specs/components/listen/listen',
+          'specs/components/style_compile/style_compile',
           'specs/plugins/vis_types/index',
           'specs/utils/slugify_id'
         ], function () {
