[docTitle] added tests

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -150,6 +150,7 @@
           'specs/components/index_pattern/_pattern_to_wildcard',
           'specs/components/vis/index',
           'specs/components/reflow_watcher',
+          'specs/components/doc_title/doc_title',
           'specs/registry/index',
           'specs/components/clipboard',
           'specs/components/agg_response/hierarchical/_build_hierarchical_data',
