Only show timepicker config if the index has a time field

--- a/desktop/src/kibana/index.html
+++ b/desktop/src/kibana/index.html
@@ -73,7 +73,7 @@
         </div>
       </nav>
 
-      <config
+      <config ng-show="opts.timefilter.enabled"
         config-template="globalConfigTemplate" config-object="opts">
       </config>
 
