minor CORS doc tweaks

--- a/sense/index.html
+++ b/sense/index.html
@@ -241,7 +241,7 @@
   <div class="modal-body">
     <p>Elasticsearch has responded with a 401 Authorization Required status code.</p>
     <p>Basic Authentication support needs to be enabled via the settings menu, or by clicking Enable Basic Auth bellow.</p>
-    <p>Note that truning on Basic Authentication support will cause the browser to enforce stricter CORS restriction and you
+    <p>Note that enabling Basic Authentication support will cause the browser to enforce stricter CORS restriction and you
     may need to change your Elasticsearch configuration. See Marvel's documentation for more details.</p>
   </div>
   <div class="modal-footer">
