--- a/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
@@ -44,6 +44,12 @@
         </div>
       </div>
 
+      <ul class="nav nav-tabs">
+        <li class="kbn-settings-tab" ng-class="{ active: state.tab === fieldType.title }" ng-repeat="fieldType in fieldTypes">
+          <a ng-click="changeTab(fieldType)">{{ fieldType.title }} <small>({{ indexPattern[fieldType.index].length }})</small></a>
+        </li>
+      </ul>
+
       <paginate list="indexPattern.fields|orderBy:table.by:table.reverse" per-page="20">
         <table class="table">
           <thead>
