[kibana] read and expose the timefilter properly

--- a/desktop/src/kibana/plugins/kibana/kibana.html
+++ b/desktop/src/kibana/plugins/kibana/kibana.html
@@ -42,9 +42,9 @@
   </nav>
 
   <config
-    ng-show="opts.timefilter.enabled"
+    ng-show="timefilter.enabled"
     config-template="globalConfigTemplate"
-    config-object="opts">
+    config-object="timefilter">
   </config>
 
   <div class="application" ng-view></div>
