--- a/desktop/src/kibana/plugins/discover/index.html
+++ b/desktop/src/kibana/plugins/discover/index.html
@@ -111,8 +111,8 @@
 
       <!-- result -->
       <div class="col-md-10 results" ng-show="resultState === 'ready'">
-        <h3 ng-show="opts.savedSearch.id" bindonce>
-          <span bo-bind="opts.savedSearch.title"></span>
+        <h3 ng-show="opts.savedSearch.id">
+          <span bindonce bo-bind="opts.savedSearch.title"></span>
           <i tooltip="Reload saved query" ng-click="resetQuery();" class="fa fa-undo smallest small"></i>
         </h3>
         <div class="discover-timechart" ng-if="opts.timefield">
