--- a/desktop/src/kibana/index.html
+++ b/desktop/src/kibana/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="/styles/theme/elk.ico">
     <title>Kibana 4</title>
 
     <script>
