--- a/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
@@ -53,60 +53,15 @@
         </li>
       </ul>
 
-      <div ng-show="state.tab == 'fields'">
-        <paginate list="indexPattern.fields|orderBy:table.by:table.reverse" per-page="20">
-          <table class="table">
-            <thead>
-              <th ng-click="setFieldSort('name')">name <i ng-class="sortClass('name')"></i></th>
-              <th ng-click="setFieldSort('type')">type <i ng-class="sortClass('type')"></i></th>
-              <th ng-click="setFieldSort('analyzed')">
-                analyzed <kbn-info info="Analyzed fields may require extra memory to visualize" placement="top"></kbn-info>
-                <i ng-class="sortClass('analyzed')"></i>
-              </th>
-              <th ng-click="setFieldSort('indexed')">
-                indexed <kbn-info info="Fields that are not indexed are unavailable for search" placement="top"></kbn-info>
-                <i ng-class="sortClass('indexed')"></i>
-              </th>
-              <th ng-click="setFieldSort('count')">
-                popularity <kbn-info info="A gauge of how often this field is used" placement="top"></kbn-info>
-                <i ng-class="sortClass('count')"></i>
-              </th>
-            </thead>
-
-            <tr class="field-settings"
-              ng-repeat="field in page">
-              <td>
-                <span bo-text="field.displayName"></span>
-                &nbsp;
-                <span
-                  bo-if="indexPattern.timeFieldName === field.name"
-                  tooltip="This field represents the time that events occured"
-                  class="label label-default">
-                <i class="fa fa-clock-o"></i>
-                </span>
-              </td>
-              <td>
-                <span bo-text="field.type"></span>
-                <i
-                bo-if="field.type == 'conflict'"
-                tooltip="The type of this field changes across indices. It is unavailable for many analysis functions"
-                class="fa fa-warning text-color-warning"></i>
-              </td>
-              <td><span bo-text="field.analyzed ? 'yes' : 'no'"></span></td>
-              <td><span bo-text="field.indexed ? 'yes' : 'no'"></span></td>
-              <td>
-                <span bo-text="field.count"></span>
-                <span class="field-popularize">
-                  <span ng-click="indexPattern.popularizeField(field.name, 1)" class="label label-default"><i class="fa fa-plus"></i></span>
-                  <span ng-click="indexPattern.popularizeField(field.name, -1)" class="label label-default"><i class="fa fa-minus"></i></span>
-                </span>
-              </td>
-            </tr>
-          </table>
-        </paginate>
+      <div ng-show="state.tab == 'fields'" class="fields">
+        <paginated-table
+          columns="fieldColumns"
+          rows="fieldRows"
+          per-page="perPage">
+        </paginated-table>
       </div>
 
-      <div ng-show="state.tab == 'scriptedFields'">
+      <div ng-show="state.tab == 'scriptedFields'" class="scripted-fields">
         No scripted fields defined
       </div>
 
