Shorten field names according to shortDots setting

--- a/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
@@ -76,7 +76,7 @@
             <tr class="field-settings"
               ng-repeat="field in page">
               <td>
-                <span bo-text="field.name"></span>
+                <span bo-text="field.displayName"></span>
                 &nbsp;
                 <span
                   bo-if="indexPattern.timeFieldName === field.name"
