break scripted fields into its own directive, with mock data

--- a/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
@@ -55,9 +55,7 @@
 
       <indexed-fields ng-show="state.tab == 'fields'" class="fields"></indexed-fields>
 
-      <div ng-show="state.tab == 'scriptedFields'" class="scripted-fields">
-        No scripted fields defined
-      </div>
+      <scripted-fields ng-show="state.tab == 'scriptedFields'" class="scripted-fields"></scripted-fields>
 
     </div>
   </kbn-settings-indices>
