consolidate router, add real title

--- a/desktop/src/kibana/plugins/settings/sections/indices/scripted_fields/index.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/scripted_fields/index.html
@@ -1,1 +1,8 @@
-<h1>OH HAI!</h1>
+<kbn-settings-app section="indices">
+  <kbn-settings-indices>
+
+    <div ng-controller="scriptedFieldsEdit">
+      <h1>{{ action }} Scripted Field</h1>
+    </div>
+  </kbn-settings-indices>
+</kbn-settings-app>
