--- a/desktop/src/kibana/plugins/settings/sections/indices/scripted_fields/index.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/scripted_fields/index.html
@@ -3,6 +3,27 @@
 
     <div ng-controller="scriptedFieldsEdit">
       <h1>{{ action }} Scripted Field</h1>
+
+      <form name="scriptedFieldForm" ng-submit="submit()">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" ng-model="scriptedField.name" class="form-control span12">
+        </div>
+        <div class="form-group">
+          <label>Script</label>
+          <textarea class="form-control span12" ng-model="scriptedField.script"></textarea>
+        </div>
+      </form>
+      <div ng-if="namingConflict" class="alert alert-danger">
+        You already have a field with the name {{ scriptedField.name }}. Naming your scripted
+        field with the same name means you won't be able to query both fields at the same time.
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" ng-click="cancel()">Cancel</button>
+        <button class="btn btn-success" ng-click="submit()" ng-disabled="scriptedFieldForm.$invalid">
+          Save Scripted Field
+        </button>
+      </div>
     </div>
   </kbn-settings-indices>
 </kbn-settings-app>
