fix the display of scripted fields, tweak styling

--- a/desktop/src/kibana/plugins/settings/sections/indices/_scripted_field_controls.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_scripted_field_controls.html
@@ -1,9 +1,9 @@
 <div class="actions pull-right">
-  <button ng-click="edit(field)" class="btn btn-default">
+  <button ng-click="edit(field)" class="btn btn-xs btn-default">
     <i class="fa fa-pencil"></i>
   </button>
 
-  <button ng-click="remove(field)" class="btn btn-danger">
+  <button ng-click="remove(field)" class="btn btn-xs btn-danger">
     <i class="fa fa-trash"></i>
   </button>
 </div>
