--- a/desktop/src/kibana/plugins/settings/sections/indices/_scripted_field_controls.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_scripted_field_controls.html
@@ -3,7 +3,10 @@
     <i class="fa fa-pencil"></i>
   </button>
 
-  <button ng-click="remove(field)" class="btn btn-xs btn-danger">
+  <button
+    confirm-click="remove(field)"
+    confirmation="Are you sure want to delete '{{field.name}}'? This action is irreversible!"
+      class="btn btn-xs btn-danger">
     <i class="fa fa-trash"></i>
   </button>
 </div>
