right-align instead of pulling right

--- a/desktop/src/kibana/plugins/settings/sections/indices/_scripted_field_controls.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_scripted_field_controls.html
@@ -1,4 +1,4 @@
-<div class="actions pull-right">
+<div class="actions">
   <button ng-click="edit(field)" class="btn btn-xs btn-default">
     <i class="fa fa-pencil"></i>
   </button>
