--- a/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
@@ -48,7 +48,7 @@
         <li class="kbn-settings-tab" ng-class="{ active: state.tab === fieldType.index }" ng-repeat="fieldType in fieldTypes">
           <a ng-click="changeTab(fieldType)">
             {{ fieldType.title }}
-            <small>({{ indexPattern[fieldType.index].length }})</small>
+            <small>({{ fieldType.count }})</small>
           </a>
         </li>
       </ul>
