fix tabbed interface index

--- a/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
+++ b/desktop/src/kibana/plugins/settings/sections/indices/_edit.html
@@ -53,7 +53,7 @@
         </li>
       </ul>
 
-      <indexed-fields ng-show="state.tab == 'fields'" class="fields"></indexed-fields>
+      <indexed-fields ng-show="state.tab == 'indexedFields'" class="fields"></indexed-fields>
 
       <scripted-fields ng-show="state.tab == 'scriptedFields'" class="scripted-fields"></scripted-fields>
 
