[SpyPanel] reduced scope of new parameter on visualize, added a default if no option is passed in for show-spy-panel Removed conditional on  from discover

--- a/desktop/src/plugins/kibana/public/visualize/editor/editor.html
+++ b/desktop/src/plugins/kibana/public/visualize/editor/editor.html
@@ -138,7 +138,7 @@
         </div>
       </div>
 
-      <visualize chrome="chrome" vis="vis" editable-vis="editableVis"  search-source="savedVis.searchSource"></visualize>
+      <visualize show-spy-panel="chrome.getVisible()" vis="vis" editable-vis="editableVis"  search-source="savedVis.searchSource"></visualize>
     </div>
   </div>
 
