[filter bar] Add aliasing.  Closes #5194

--- a/desktop/src/ui/public/filter_bar/filter_bar.html
+++ b/desktop/src/ui/public/filter_bar/filter_bar.html
@@ -13,8 +13,9 @@
   <div class="filter" ng-class="{ negate: filter.meta.negate, disabled: filter.meta.disabled }" ng-repeat="filter in filters">
     <div class="filter-description">
       <span ng-if="filter.$state.store == 'globalState'"><i class="fa fa-fw fa-thumb-tack pinned"></i></span>
-      <span>{{ filter.meta.key }}:</span>
-      <span>"{{ filter.meta.value }}"</span>
+      <span ng-if="filter.meta.alias">{{ filter.meta.alias }}</span>
+      <span ng-if="!filter.meta.alias">{{ filter.meta.key }}:</span>
+      <span ng-if="!filter.meta.alias">"{{ filter.meta.value }}"</span>
     </div>
     <div class="filter-actions">
       <a class="action filter-toggle" ng-click="toggleFilter(filter)">
